# sms-bomber

./: Cargo.toml  README.md
script/: build.sh  install.sh
src/: cli.rs  lib.rs  main.rs
src/api/: country.rs  data.rs  mod.rs
src/sms/: api_data.rs  mod.rs  sender.rs
