[package]
name = "sms-bomber"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
regex = "1.10.5"
ureq = { version = "*", features = ["json", "charset"] }
